--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       body {
         background-color: LawnGreen;
       }
-      </style>
+    </style>
 
     <main class="flex-shrink-0">
         <div class="container">
-          <h1 class="mt-5 py-5">This is the homepage</h1>
+          <h1 class="mt-5">This is the homepage</h1>
           <p class="lead">This is still a work in progress.</p>
           <p class="lead"> For Information on how we are handling Covid-19. Please click <a href="https://sdefaultio.github.io/special.html">HERE</a>.</p>
         </div>        
