--- a/hours.html
+++ b/hours.html
@@ -65,11 +65,11 @@
 
 
     <main>
-      <div class="d-flex align-items-center mt-5 py-3">
+      <div class="container mt-5 py-3">
         <style>
             background-color: blue;
         </style>
-        <h1 class="mt-5" style="color:white;">Welcome to the Hours page!</h1>
+        <h1 class="mt-5" style="color:white;">Welcome to the Hours page!</h1><br>
         
         <p style="background-color:gray;color:white;">
             <strong>Our Current Operating Hours Are:</strong><br>
