--- a/contact.html
+++ b/contact.html
@@ -63,21 +63,16 @@
 
 
      <main>
-        <div class="d-flex align-items-center mt-5 py-3">
+        <div class="container mt-5 py-3">
             <p style="background-color:gray;"></p>
 
-            <!--<h1 class="mt-5" style="color:white;"><strong>VR CENTER LLC!</strong></h1>-->
-            <dt class="mt-5">VR CENTER LLC!</dt>
-            <dd>thevrcenterllc@gmail.com</dd>
-            <dd>540-400-0929</dd>
-            <dd>2012 Apperson Drive, Salem, VA</dd>
-            <dd>24153s</dd>
+            <h1 class="mt-5" style="color:white;"><strong>VR CENTER LLC!</strong></h1>
 
-            <!--<p style="color:white;">thevrcenter.net</p>
+            <p style="color:white;">thevrcenter.net</p>
             <p style="color:white;">thevrcenterllc@gmail.com</p>
             <p style="color:white;">540-400-0929</p>
             <p style="color:white;">2012 Apperson Drive, Salem, VA</p>
-            <p style="color:white;">24153</p>-->
+            <p style="color:white;">24153</p>
         </div>
      </main>
 
