--- a/hours.html
+++ b/hours.html
@@ -69,7 +69,7 @@
         <style>
             background-color: blue;
         </style>
-        <h1 class="mt-5" style="color:white;">Welcome to the Hours page!</h1><br>
+        <h1 class="mt-5" style="color:white;">Welcome to the Hours page!</h1>
         
         <p style="background-color:gray;color:white;">
             <strong>Our Current Operating Hours Are:</strong><br>
